# webpipe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  mcp.example.json
.github/: settings.yml
.github/workflows/: ci.yml
archive/: EVAL_ARCHIVE.md
crates/webpipe/: Cargo.toml
crates/webpipe-core/: Cargo.toml  README.md
crates/webpipe-core/src/: lib.rs
crates/webpipe-local/: Cargo.toml  README.md
crates/webpipe-local/src/: arxiv.rs  cache_search.rs  compare.rs  extract.rs  firecrawl.rs  lib.rs  links.rs  ollama.rs  openai_compat.rs  papers.rs  perplexity.rs  render_playwright.rs  rewrite.rs  search.rs  semantic.rs  shellout.rs  textprep.rs  vision_gemini.rs  youtube.rs
crates/webpipe-mcp/: Cargo.toml  README.md
crates/webpipe-mcp/examples/: e2e_fixture_server.rs  judge_swarm_stub_server.rs  stdio_live_cost_play.rs  stdio_live_defaults.rs  stdio_live_failure_play.rs  stdio_live_probe_urls.rs  stdio_live_research_extraction.rs  stdio_live_search_evidence.rs  stdio_live_sweep.rs  stdio_smoke.rs
crates/webpipe-mcp/fixtures/: e2e_qrels_v1.json  e2e_queries_v1.json  play_harder_search_evidence_404.json  play_harder_search_evidence_pdf.json  play_harder_web_extract_js_challenge.json  play_harder_web_extract_pdf.json  qrels_seed.json  queries.txt  queries_seed.json  urls.txt  urls_mcp.txt  urls_seed.txt
crates/webpipe-mcp/src/: eval.rs  lib.rs  main.rs
crates/webpipe-mcp/src/mcp/: envelope.rs
crates/webpipe-mcp/tests/: arxiv_rewrite_contract.rs  cache_search_extract_e2e.rs  cli_eval_matrix_contract.rs  cli_eval_matrix_export_contract.rs  cli_eval_matrix_judge_contract.rs  cli_eval_matrix_run_contract.rs  cli_eval_matrix_score_contract.rs  cli_eval_search_contract.rs  cli_eval_search_extract_contract.rs  cli_mcp_call_args_json_file_contract.rs  cli_output_text_contract.rs  cli_version_contract.rs  doctor_contract.rs  e2e_arxiv_pdf_html_fallback_contract.rs  e2e_matrix_contract.rs  e2e_search_extract_offline_cache.rs  e2e_web_extract_variety.rs  e2e_web_fetch_truncation.rs  e2e_web_fetch_variety.rs  eval_search_extract_compare_modes.rs  explore_extract_contract.rs  extract_content_types_e2e.rs  firecrawl_fallback_low_signal_contract.rs  gist_rewrite_contract.rs  github_blob_rewrite_contract.rs  github_commit_patch_rewrite_contract.rs  github_issue_rewrite_contract.rs  github_pr_patch_rewrite_contract.rs  github_release_rewrite_contract.rs  github_rewrite_contract.rs  live_arxiv_pdf_smoke.rs  live_auto_provider_smoke.rs  live_brave_provider_smoke.rs  live_firecrawl_eval_fetch_smoke.rs  live_meta_brave_smoke.rs  live_perplexity_smoke.rs  live_provider_smoke.rs  live_search_caps_smoke.rs  live_url_seed_smoke.rs  mcp_stdio_anonymous_mode_contract.rs  (+35 more)
crates/webpipe/src/: lib.rs
scripts/: env_files_audit.py  export_self_opt_sqlite.py  mcp_env_audit.py  migrate_cursor_mcp.py  publish_audit.py  webpipe-cursor-mcp-stdio.sh
