[package]
name = "webpipe-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Backend-agnostic fetch/search types and traits for webpipe."
repository = "https://github.com/arclabs561/webpipe"
homepage = "https://github.com/arclabs561/webpipe"
documentation = "https://docs.rs/webpipe-core"
readme = "README.md"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

