[package]
name = "webpipe-local"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Local (reqwest + filesystem cache) implementations for webpipe."

[dependencies]
webpipe-core = { path = "../webpipe-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls", "http2", "charset", "system-proxy"] }
futures-util = "0.3"
tokio = { version = "1.40", features = ["rt", "macros", "time"] }
url = "2.5"
sha2 = "0.10"
hex = "0.4"
html2text = "0.14"
html_scraper = { package = "scraper", version = "0.20" }
pdf-extract = "0.10.0"
tempfile = "3.10"
base64 = { version = "0.22", optional = true }
quick-xml = "0.37"

[dev-dependencies]
axum = "0.7"
proptest = "1.9"

[features]
default = []
semantic = []
# Optional multimodal vision backend (Gemini Flash) for image-to-text.
vision-gemini = ["dep:base64"]
